--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
     "better-scroll": "^1.15.2",
     "core-js": "^3.6.4",
     "lib-flexible": "^0.3.2",
@@ -16,6 +17,7 @@
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "swiper": "^5.3.1",
+    "vant": "^2.5.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
